// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaViewer - null type test 0 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    null
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  />
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    A simple null example
  </div>
</details>
`;

exports[`JSONSchemaViewer - null type test 1 1`] = `
<details
  open={true}
>
  <summary>
    <strong>
      Schema
    </strong>
  </summary>
  <strong>
    type
  </strong>
   : 
  <span
    style={
      {
        "opacity": "0.6",
      }
    }
  >
    string
  </span>
  <div
    style={
      {
        "marginTop": "var(--ifm-table-cell-padding)",
      }
    }
  >
    <div>
      ❓ 
      Nullable
    </div>
    <div>
      <strong>
        Possible values :
      </strong>
       
      <code>
        [null,"Some constant here ..."]
      </code>
    </div>
  </div>
</details>
`;
